# t1_comp_graf

./: CMakeLists.txt  README.md  f_shader.shd  glad.c  graphic_math.cpp  main.cpp  makefile  opengl_exception.cpp  relatorio.odt  shader.cpp  shader_program.cpp  shader_source.cpp  v_shader.shd  vertex_array.cpp  vertex_buffer.cpp
inc/: camera.hpp  graphic_math.hpp  opengl_exception.hpp  point.hpp  shader.hpp  shader_program.hpp  shader_source.hpp  vec3d.hpp  vertex.hpp  vertex3d.hpp  vertex_array.hpp  vertex_buffer.hpp
inc/glad/: glad.h
src/: camera.cpp  glad.c  graphic_math.cpp  main.cpp  opengl_exception.cpp  point.cpp  shader.cpp  shader_program.cpp  shader_source.cpp  v_shader.shd  vec3d.cpp  vertex.cpp  vertex3d.cpp  vertex_array.cpp  vertex_buffer.cpp
