cmake_minimum_required(VERSION 3.10)
project(cg1)
include_directories(inc)
file(GLOB SOURCES "src/*.cpp")
find_package(glfw3 3.2 REQUIRED)
find_package(OpenGL REQUIRED)
add_executable(cg1 ${SOURCES} src/glad.c)
target_include_directories(cg1 PUBLIC ${OPENGL_INCLUDE_DIR})
target_link_libraries(cg1 ${OPENGL_gl_LIBRARY})
target_link_libraries(cg1 glfw)
target_link_libraries(cg1 dl)
#install(TARGETS cg1 RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin)
